src/test/ui/associated-type-bounds/duplicate.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/duplicate.rs:5:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:10:36
   |
LL | struct SI1<T: Iterator<Item: Copy, Item: Send>> { f: T }
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:12:36
   |
LL | struct SI2<T: Iterator<Item: Copy, Item: Copy>> { f: T }
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:14:39
   |
LL | struct SI3<T: Iterator<Item: 'static, Item: 'static>> { f: T }
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:16:45
   |
LL | struct SW1<T> where T: Iterator<Item: Copy, Item: Send> { f: T }
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:18:45
   |
LL | struct SW2<T> where T: Iterator<Item: Copy, Item: Copy> { f: T }
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:20:48
   |
LL | struct SW3<T> where T: Iterator<Item: 'static, Item: 'static> { f: T }
   |                                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:23:34
   |
LL | enum EI1<T: Iterator<Item: Copy, Item: Send>> { V(T) }
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:25:34
   |
LL | enum EI2<T: Iterator<Item: Copy, Item: Copy>> { V(T) }
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:27:37
   |
LL | enum EI3<T: Iterator<Item: 'static, Item: 'static>> { V(T) }
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:29:43
   |
LL | enum EW1<T> where T: Iterator<Item: Copy, Item: Send> { V(T) }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:31:43
   |
LL | enum EW2<T> where T: Iterator<Item: Copy, Item: Copy> { V(T) }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:33:46
   |
LL | enum EW3<T> where T: Iterator<Item: 'static, Item: 'static> { V(T) }
   |                               -------------  ^^^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:36:35
   |
LL | union UI1<T: Iterator<Item: Copy, Item: Send>> { f: T }
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:38:35
   |
LL | union UI2<T: Iterator<Item: Copy, Item: Copy>> { f: T }
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:40:38
   |
LL | union UI3<T: Iterator<Item: 'static, Item: 'static>> { f: T }
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:42:44
   |
LL | union UW1<T> where T: Iterator<Item: Copy, Item: Send> { f: T }
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:44:44
   |
LL | union UW2<T> where T: Iterator<Item: Copy, Item: Copy> { f: T }
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:46:47
   |
LL | union UW3<T> where T: Iterator<Item: 'static, Item: 'static> { f: T }
   |                                -------------  ^^^^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:49:32
   |
LL | fn FI1<T: Iterator<Item: Copy, Item: Send>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:51:32
   |
LL | fn FI2<T: Iterator<Item: Copy, Item: Copy>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:53:35
   |
LL | fn FI3<T: Iterator<Item: 'static, Item: 'static>>() {}
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:55:43
   |
LL | fn FW1<T>() where T: Iterator<Item: Copy, Item: Send> {}
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:57:43
   |
LL | fn FW2<T>() where T: Iterator<Item: Copy, Item: Copy> {}
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:59:46
   |
LL | fn FW3<T>() where T: Iterator<Item: 'static, Item: 'static> {}
   |                               -------------  ^^^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:68:40
   |
LL | fn FAPIT1(_: impl Iterator<Item: Copy, Item: Send>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:70:40
   |
LL | fn FAPIT2(_: impl Iterator<Item: Copy, Item: Copy>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:72:43
   |
LL | fn FAPIT3(_: impl Iterator<Item: 'static, Item: 'static>) {}
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:62:42
   |
LL | fn FRPIT1() -> impl Iterator<Item: Copy, Item: Send> { iter::empty() }
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:64:42
   |
LL | fn FRPIT2() -> impl Iterator<Item: Copy, Item: Copy> { iter::empty() }
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:66:45
   |
LL | fn FRPIT3() -> impl Iterator<Item: 'static, Item: 'static> { iter::empty() }
   |                              -------------  ^^^^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:75:39
   |
LL | const CIT1: impl Iterator<Item: Copy, Item: Send> = iter::empty();
   |                           ----------  ^^^^^^^^^^ re-bound here
   |                           |
   |                           `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:77:39
   |
LL | const CIT2: impl Iterator<Item: Copy, Item: Copy> = iter::empty();
   |                           ----------  ^^^^^^^^^^ re-bound here
   |                           |
   |                           `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:79:42
   |
LL | const CIT3: impl Iterator<Item: 'static, Item: 'static> = iter::empty();
   |                           -------------  ^^^^^^^^^^^^^ re-bound here
   |                           |
   |                           `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:81:40
   |
LL | static SIT1: impl Iterator<Item: Copy, Item: Send> = iter::empty();
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:83:40
   |
LL | static SIT2: impl Iterator<Item: Copy, Item: Copy> = iter::empty();
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:85:43
   |
LL | static SIT3: impl Iterator<Item: 'static, Item: 'static> = iter::empty();
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:88:46
   |
LL | fn lit1() { let _: impl Iterator<Item: Copy, Item: Send> = iter::empty(); }
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:90:46
   |
LL | fn lit2() { let _: impl Iterator<Item: Copy, Item: Copy> = iter::empty(); }
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:92:49
   |
LL | fn lit3() { let _: impl Iterator<Item: 'static, Item: 'static> = iter::empty(); }
   |                                  -------------  ^^^^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:95:35
   |
LL | type TAI1<T: Iterator<Item: Copy, Item: Send>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:97:35
   |
LL | type TAI2<T: Iterator<Item: Copy, Item: Copy>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:99:38
   |
LL | type TAI3<T: Iterator<Item: 'static, Item: 'static>> = T;
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:101:44
   |
LL | type TAW1<T> where T: Iterator<Item: Copy, Item: Send> = T;
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:103:44
   |
LL | type TAW2<T> where T: Iterator<Item: Copy, Item: Copy> = T;
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:105:47
   |
LL | type TAW3<T> where T: Iterator<Item: 'static, Item: 'static> = T;
   |                                -------------  ^^^^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:108:1
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:108:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:113:1
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:113:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:118:1
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:118:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:123:1
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:123:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:128:1
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:128:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:133:1
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:133:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:139:36
   |
LL | trait TRI1<T: Iterator<Item: Copy, Item: Send>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:141:36
   |
LL | trait TRI2<T: Iterator<Item: Copy, Item: Copy>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:143:39
   |
LL | trait TRI3<T: Iterator<Item: 'static, Item: 'static>> {}
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:145:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:147:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:149:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:151:45
   |
LL | trait TRW1<T> where T: Iterator<Item: Copy, Item: Send> {}
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:153:45
   |
LL | trait TRW2<T> where T: Iterator<Item: Copy, Item: Copy> {}
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:155:48
   |
LL | trait TRW3<T> where T: Iterator<Item: 'static, Item: 'static> {}
   |                                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:157:46
   |
LL | trait TRSW1 where Self: Iterator<Item: Copy, Item: Send> {}
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:157:46
   |
LL | trait TRSW1 where Self: Iterator<Item: Copy, Item: Send> {}
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:160:46
   |
LL | trait TRSW2 where Self: Iterator<Item: Copy, Item: Copy> {}
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:160:46
   |
LL | trait TRSW2 where Self: Iterator<Item: Copy, Item: Copy> {}
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:163:49
   |
LL | trait TRSW3 where Self: Iterator<Item: 'static, Item: 'static> {}
   |                                  -------------  ^^^^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:163:49
   |
LL | trait TRSW3 where Self: Iterator<Item: 'static, Item: 'static> {}
   |                                  -------------  ^^^^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:166:43
   |
LL | trait TRA1 { type A: Iterator<Item: Copy, Item: Send>; }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:168:43
   |
LL | trait TRA2 { type A: Iterator<Item: Copy, Item: Copy>; }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:170:46
   |
LL | trait TRA3 { type A: Iterator<Item: 'static, Item: 'static>; }
   |                               -------------  ^^^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:173:40
   |
LL | type TADyn1 = dyn Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:177:44
   |
LL | type TADyn2 = Box<dyn Iterator<Item: Copy, Item: Copy>>;
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:181:43
   |
LL | type TADyn3 = dyn Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:108:24
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:108:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                                    ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:113:24
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:113:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                                    ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:118:24
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:118:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                                       ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:123:28
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:123:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:128:28
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:128:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:133:28
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:133:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                                           ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:173:28
   |
LL | type TADyn1 = dyn Iterator<Item: Copy, Item: Send>;
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:173:40
   |
LL | type TADyn1 = dyn Iterator<Item: Copy, Item: Send>;
   |                                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:177:32
   |
LL | type TADyn2 = Box<dyn Iterator<Item: Copy, Item: Copy>>;
   |                                ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:177:44
   |
LL | type TADyn2 = Box<dyn Iterator<Item: Copy, Item: Copy>>;
   |                                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:181:28
   |
LL | type TADyn3 = dyn Iterator<Item: 'static, Item: 'static>;
   |                            ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:181:43
   |
LL | type TADyn3 = dyn Iterator<Item: 'static, Item: 'static>;
   |                                           ^^^^^^^^^^^^^

error: aborting due to 96 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0719`.
